<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/cubiertos" />

    <TextView
        android:id="@+id/bienvenido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:text="@string/bienvenido"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorPrimary"
        android:textSize="28sp" />

    <Button
        android:id="@+id/boton1"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30sp"
        android:layout_marginTop="70dp"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:padding="6dp"
        android:text="@string/registro"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/boton2"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_below="@id/boton1"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30sp"
        android:layout_marginTop="150dp"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:padding="6dp"
        android:text="@string/salon"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/boton3"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_below="@id/boton2"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30sp"
        android:layout_marginTop="230dp"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:padding="6dp"
        android:text="@string/menu"
        android:textSize="16sp" />

    <Button
        android:id="@+id/boton4"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_below="@id/boton3"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30sp"
        android:layout_marginTop="310dp"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:padding="6dp"
        android:text="@string/pedido"
        android:textSize="16sp" />

    <Button
        android:id="@+id/boton5"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="58dp"
        android:layout_marginBottom="25dp"
        android:background="@color/colorPrimary"
        android:padding="6dp"
        android:text="@string/ayuda"
        android:textSize="16sp"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/boton6"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="25dp"
        android:layout_toEndOf="@id/boton5"
        android:background="@color/colorPrimary"
        android:padding="6dp"
        android:text="@string/acerca"
        android:textSize="16sp"
        android:textColor="@android:color/white" />

</RelativeLayout>