<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="UselessParent">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp">

        <TableRow>

            <TextView
                android:id="@+id/textView1"
                android:layout_width="433dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/colorPrimary"
                android:textSize="28sp" />
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:gravity="center"
                android:text="@string/appAuthor"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp" />
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:gravity="center"
                android:text="@string/appCopyright"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/boton6"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginStart="250dp"
        android:layout_marginTop="400dp"
        android:background="@color/colorPrimary"
        android:padding="6dp"
        android:text="@string/regresar"
        android:textColor="@android:color/white"
        android:textSize="16sp" />
</RelativeLayout>